--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,21 @@
 }
 
 *{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body{
     background-color: var(--background);
     font-family: "Fira Code", monospace;
+    width: 100%;
 }
 
 button{
@@ -185,7 +192,7 @@ nav ul li a span{
     .menu {
         display: none;
         position: fixed;
-        top: 4%;
+        top: 0;
         left: 2%;
         width: 100%;
         height: 100vh;
@@ -202,6 +209,7 @@ nav ul li a span{
         display: flex;
         flex-direction: column;
         gap: 32px;
+        padding-top: 50px;
     }
 
     .menu nav ul li a{
