--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,4 +1,8 @@
 @media (max-width: 1024px) {
+    .social-icons{
+        display: none;
+    }
+    
     .banner {
         flex-direction: column;
         gap: 40px;
